Update Profile CSS + Placeholder Image

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -229,7 +229,7 @@
                                         <div class='profile-user'>
 
                                             <div class='profile-image-wrapper'>
-                                                <img :src='image'>
+                                                <img src='images/nostaff.png'>
                                                 <div class='profile-image-overlay'>
                                                     <div class='profile-image-text-box' @click='imageChange = !imageChange'>
                                                         <p class='profile-image-text'>Change image</p>
