Updated home cards and descriptions

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -34,7 +34,7 @@
                                         <div class='home-shortcut-cards'>
                                             <h3>CRIMINAL RECORD</h3>
                                             <p>
-                                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi esse deserunt aliquid reiciendis sunt iusto?
+                                                Search public criminal records by user name or phone number
                                             </p>
                                             <v-btn small elevation='5' @click='changePage("CRIMINAL RECORD")'>GO TO CRIMINAL RECORD</v-btn>
                                         </div>
@@ -42,15 +42,31 @@
                                         <div class='home-shortcut-cards'>
                                             <h3>SEARCH VEHICLES</h3>
                                             <p>
-                                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae neque ratione minus, quo aliquid fugiat.
+                                                Search the complete database of vehicles by plate
                                             </p>
                                             <v-btn small elevation='5' @click='changePage("SEARCH VEHICLES")'>GO TO SEARCH VEHICLES</v-btn>
                                         </div>
 
                                         <div class='home-shortcut-cards'>
+                                            <h3>DISPATCH</h3>
+                                            <p>
+                                                View the full history of incoming dispatch calls and choose to respond
+                                            </p>
+                                            <v-btn small elevation='5' @click='changePage("DISPATCH")'>GO TO DISPATCH</v-btn>
+                                        </div>
+
+                                        <div class='home-shortcut-cards'>
+                                            <h3>WARRANTS</h3>
+                                            <p>
+                                                View all active warrants
+                                            </p>
+                                            <v-btn small elevation='5' @click='changePage("WARRANTS")'>GO TO WARRANTS</v-btn>
+                                        </div>
+
+                                        <div class='home-shortcut-cards'>
                                             <h3>PROFILE</h3>
                                             <p>
-                                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint tenetur consequuntur, officiis architecto aspernatur corporis?
+                                                View or edit your custom profile and go on or off duty 
                                             </p>
                                             <v-btn small elevation='5' @click='changePage("PROFILE")'>GO TO PROFILE</v-btn>
                                         </div>
